[gd_scene load_steps=39 format=3 uid="uid://qgt3v8j3wb4r"]

[ext_resource type="Script" path="res://Enemy.gd" id="1_ih4wl"]
[ext_resource type="Texture2D" uid="uid://dk5x7sdk14477" path="res://Pixel Adventure 1/Free/Main Characters/Ninja Frog/Hit (32x32).png" id="2_htn4x"]
[ext_resource type="Texture2D" uid="uid://r2l61s5pquj2" path="res://Pixel Adventure 1/Free/Main Characters/Ninja Frog/Idle (32x32).png" id="3_bpdj1"]
[ext_resource type="Texture2D" uid="uid://bacr0m1bbmw0a" path="res://Pixel Adventure 1/Free/Main Characters/Ninja Frog/Run (32x32).png" id="4_42q26"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ystl6"]
atlas = ExtResource("2_htn4x")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_82jvi"]
atlas = ExtResource("2_htn4x")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k4eow"]
atlas = ExtResource("2_htn4x")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ncr8"]
atlas = ExtResource("2_htn4x")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hj626"]
atlas = ExtResource("2_htn4x")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vquvd"]
atlas = ExtResource("2_htn4x")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ksw14"]
atlas = ExtResource("2_htn4x")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ttkd"]
atlas = ExtResource("3_bpdj1")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bbymi"]
atlas = ExtResource("3_bpdj1")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s15t0"]
atlas = ExtResource("3_bpdj1")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eue76"]
atlas = ExtResource("3_bpdj1")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ccpoa"]
atlas = ExtResource("3_bpdj1")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2ifa"]
atlas = ExtResource("3_bpdj1")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m1clv"]
atlas = ExtResource("3_bpdj1")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6o024"]
atlas = ExtResource("3_bpdj1")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4vuq"]
atlas = ExtResource("3_bpdj1")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqrwj"]
atlas = ExtResource("3_bpdj1")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sscgt"]
atlas = ExtResource("3_bpdj1")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ptwn4"]
atlas = ExtResource("4_42q26")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yal6i"]
atlas = ExtResource("4_42q26")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u55tt"]
atlas = ExtResource("4_42q26")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bvake"]
atlas = ExtResource("4_42q26")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g3ben"]
atlas = ExtResource("4_42q26")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xysc2"]
atlas = ExtResource("4_42q26")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w1tuj"]
atlas = ExtResource("4_42q26")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dng86"]
atlas = ExtResource("4_42q26")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_argy8"]
atlas = ExtResource("4_42q26")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ddd2n"]
atlas = ExtResource("4_42q26")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1uabi"]
atlas = ExtResource("4_42q26")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r2tp1"]
atlas = ExtResource("4_42q26")
region = Rect2(352, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_v48j4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ystl6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_82jvi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k4eow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ncr8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hj626")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vquvd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ksw14")
}],
"loop": true,
"name": &"hit",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ttkd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bbymi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s15t0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eue76")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ccpoa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2ifa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m1clv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6o024")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4vuq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqrwj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sscgt")
}],
"loop": true,
"name": &"idle",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ptwn4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yal6i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u55tt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bvake")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g3ben")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xysc2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w1tuj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dng86")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_argy8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ddd2n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1uabi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r2tp1")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mia1n"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xhj3e"]
size = Vector2(66, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_axnux"]
size = Vector2(21.978, 20)

[node name="Enemy" type="CharacterBody2D" groups=["Enemy"]]
visible = false
collision_layer = 2
script = ExtResource("1_ih4wl")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_v48j4")
animation = &"walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_mia1n")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_xhj3e")

[node name="LeftMarker2D" type="Marker2D" parent="."]
position = Vector2(-54, 0)

[node name="RightMarker2D" type="Marker2D" parent="."]
position = Vector2(58, 0)

[node name="HeadHitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HeadHitbox"]
position = Vector2(0.0917652, -5)
scale = Vector2(0.918353, 0.546884)
shape = SubResource("RectangleShape2D_axnux")

[connection signal="area_entered" from="Area2D" to="." method="_on_detection_area_body_exited"]
[connection signal="area_exited" from="Area2D" to="." method="_on_detection_area_body_entered"]
[connection signal="body_entered" from="HeadHitbox" to="." method="_on_head_hitbox_body_entered"]
